--- a/assets/sass/layout/header.scss
+++ b/assets/sass/layout/header.scss
@@ -272,7 +272,7 @@
     transition: 0.3s all;
     a{
       cursor: pointer;
-      margin-right: 10px;
+      margin-right: 25px;
       transition: 0.3s all;
       &:last-child{
         margin-right: 0;
@@ -288,7 +288,7 @@
     
   }
   &_img{
-    margin-right: 15px;
+    // margin-right: 15px;
     width: 18px;
     height: 18px;
     background: $color-white;
