--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }} 
   {{  partial "blocks/hero.html" . }}
-  <section class="product">
+  <section class="product" id="faq">
     <div class="container">
       <div class="row">
         <div class="faq_cont">
