--- a/layouts/partials/blocks/hero.html
+++ b/layouts/partials/blocks/hero.html
@@ -5,7 +5,7 @@
             <h1>Taxi<span class="black">invest</span></h1>
             <h3>Інвестиція в авто для роботи в Таксі дохідність від 40% річних</h3>
             <div class="hero_btn"> 
-                <a class="general-button" href="#"> 
+                <a class="general-button" href="#contact"> 
                     <div class="general-button_img" style="-webkit-mask-image: url('../img/svg/heart.svg');
                                 mask-image: url('../img/svg/heart.svg');">
                     </div>
