--- a/assets/sass/base/_global.scss
+++ b/assets/sass/base/_global.scss
@@ -10,6 +10,9 @@ body {
   flex-direction: column;
   justify-content: space-between;
   position: relative;
+  @include sm {
+    scroll-padding-top: 90px;
+  }
 }
 
  
