--- a/assets/sass/components/hero.scss
+++ b/assets/sass/components/hero.scss
@@ -6,7 +6,12 @@
   width: 100%;
   min-height: 100vh; 
   box-sizing: border-box; 
+  @include xsl {
+    padding: 180px 0 100px;
+  }
   &:before{
+    top: 0;
+    left: 0;
     content: ' ';
     position: absolute;
     width: 100%;
@@ -84,13 +89,24 @@
     margin: 55px auto 0;
     flex-direction: row;
     justify-content: center;
+    @include xsl {
+      flex-wrap: wrap;
+      justify-content: space-around;
+      margin: 15px auto 0;
+    }
     .general-button{
       margin-right: 35px;
+      @include xsl { 
+        margin: 20px 15px 0;
+      }
       &:last-child{
         margin-right: 0;
         .general-button_img{
           margin-right: 0;
           margin-left: 10px;
+          @include xsl {
+            margin-right: 10px;
+          }
         }
       }
     }
@@ -216,7 +232,9 @@
     margin: 0;
     cursor: pointer;
     @include xsl{
-      padding: 25px 50px 30px 20px;
+      padding: 20px 50px 25px 20px;
+      font-size: 20px;
+      line-height: 24px;
     }
     &.active-header{
       .faq_item_img{
@@ -231,6 +249,9 @@
   display: flex;
   flex-direction: column;
   padding: 70px 0 70px;
+  @include xsl {
+    padding: 50px 0 ;
+  }
   h3{
     text-align: center;
   }
@@ -240,12 +261,22 @@
     justify-content: space-between;
     width: 100%;
     margin: 70px 0 0;
+    @include xsl {
+      margin: 40px 0 0;
+    }
+    @include md {
+     flex-direction: column;
+     justify-content: center;
+    }
   }
   &_content{
     box-sizing: border-box;
     padding-right: 30px;
     display: flex;
     flex-direction: column;
+    @include md {
+      padding-right: 0px;
+    }
   }
   &_info{
     display: flex;
@@ -257,6 +288,9 @@
     img{
       margin-right: 20px;
       margin-top: 7px;
+      @include xsl {
+        margin-top: 3px;
+      }
     }
     p{
       font-family: $font-future;
@@ -265,7 +299,13 @@
       font-size: 24px;
       line-height: 31px; 
       color: $color-black;
-      margin: 0 auto;
+      margin: 0 0;
+      text-align: left;
+      @include xsl {
+        font-size: 20px;
+        line-height: 24px;
+        text-align: justify;
+      }
       & *{
         font-size: inherit;
         line-height: inherit; 
@@ -275,9 +315,14 @@
   }
   &_img{
     display: flex;
+    @include md {
+      margin-top: 40px;
+      justify-content: center;
+    }
     img{
       object-fit: cover;
       object-position: center;
+      max-width: 100%;
     }
   }
 }
@@ -287,6 +332,9 @@
   flex-direction: column;
   padding: 70px 0;
   background-color: #F7F9FC;
+  @include xsl {
+    padding: 40px 0; 
+  }
   h3{
     text-align: center;
   }
@@ -296,6 +344,9 @@
     flex-wrap: wrap;
     justify-content: space-around;
     margin: 50px 0 0;
+    @include xsl {
+      margin: 30px 0 0;
+    }
   }
   &_items{
     display: flex;
@@ -303,6 +354,10 @@
     width: 100%;
     max-width: 215px;
     margin: 40px 15px 15px;
+    @include xsl {
+      max-width: 185px;
+      margin: 25px 15px 15px;
+    }
     p{
       font-family: $font-future;
       font-style: normal;
@@ -339,10 +394,16 @@
 .variant{
   .about_cont{
     flex-direction: row-reverse;
+    @include md {
+      flex-direction: column; 
+    }
   }
   .about_content{
     padding-right: 0;
     padding-left: 30px;
+    @include md {
+      padding-left: 0px;
+    }
   }
 }
 .aption{
@@ -350,6 +411,9 @@
   flex-direction: column;
   padding: 70px 0;
   background-color: #F7F9FC;
+  @include xsl {
+    padding: 40px 0;
+  }
   h3{
     text-align: center;
   }
@@ -374,6 +438,9 @@
     box-shadow: 0px 8px 10px rgba(92,174,255,0.17);
     border-radius: 10px;
     margin: 0 15px 30px;  
+    @include xsl {
+      margin: 0 0px 30px;  
+    }
   }
   &_img{
     margin: 0 auto 30px;
@@ -430,6 +497,9 @@
   flex-direction: column;
   padding: 70px 0;
   background-color: #F7F9FC;
+  @include xsl {
+    padding: 40px 0;
+  }
   h3{
     text-align: center;
   }
@@ -441,6 +511,9 @@
     margin: 50px auto 0;
     width: 100%;
     max-width: 760px;
+    @include xsl {
+      margin: 30px auto 0;
+    }
   }
   &_items{
     display: flex;
@@ -449,6 +522,9 @@
     margin: 0 0 30px;
     &:last-child{
       margin: 0 0 0;
+    }
+    @include xsl {
+      margin: 0 0 25px;
     }
   }
   &_number{
@@ -464,6 +540,11 @@
     font-size: 36px; 
     color: $color-white; 
     background-color: $color-blue4;
+    @include xsl {
+      line-height: 45px;
+      min-width: 45px;
+      font-size: 26px;
+    }
     & *{
       font-size: inherit;
       line-height: inherit; 
@@ -478,6 +559,11 @@
     line-height: 31px; 
     color: $color-black;
     margin: 13px auto 0;
+    @include xsl {
+      font-size: 19px;
+      line-height: 24px;
+      margin: 1px auto 0;
+    }
     & *{
       font-size: inherit;
       line-height: inherit; 
@@ -491,6 +577,9 @@
   display: flex;
   flex-direction: column;
   padding: 70px 0; 
+  @include xsl {
+    padding: 40px 0;
+  }
   h3{
     text-align: center;
   }
@@ -502,6 +591,9 @@
     margin: 50px auto 0;
     width: 100%;
     max-width: 760px;
+    @include xsl {
+      margin: 30px auto 0;
+    }
   }
   &_items{
     display: flex;
@@ -513,6 +605,15 @@
     box-sizing: border-box;
     padding: 15px 20px;
     align-items: flex-start;
+    @include sm {
+      width: 100%;
+      margin: 20px 0px;
+    } 
+    @include xsl {
+      padding: 15px 15px;
+      border-radius: 10px;
+      margin: 10px 0;
+    }
     img{
       margin-right: 20px;
       margin-top: 7px;
