--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
                   </div>
               </div>
               <div class="about_img">
-                <img class="lazy" data-src="{{ "img/about.jpg" | absURL }}" data-srcset="{{ "img/about.jpg" | absURL }}" alt="about"/> 
+                <img class="lazy" data-src="{{ "img/about.webp" | absURL }}" data-srcset="{{ "img/about.webp" | absURL }}" alt="about"/> 
               </div>
           </div> 
       </div>
@@ -86,7 +86,7 @@
                   </div> 
               </div>
               <div class="about_img">
-                <img class="lazy" data-src="{{ "img/about.jpg" | absURL }}" data-srcset="{{ "img/about.jpg" | absURL }}" alt="about"/> 
+                <img class="lazy" data-src="{{ "img/about.webp" | absURL }}" data-srcset="{{ "img/about.webp" | absURL }}" alt="about"/> 
               </div>
           </div> 
       </div>
@@ -186,7 +186,7 @@
           {{ end }} 
         </div> 
     </div>
-    <img class="general_img lazy" data-src="{{ "img/features.jpg" | absURL }}" data-srcset="{{ "img/features.jpg" | absURL }}" alt="bg"/>
+    <img class="general_img lazy" data-src="{{ "img/features.webp" | absURL }}" data-srcset="{{ "img/features.webp" | absURL }}" alt="bg"/>
   </section>
   <section class="contact" id="contact">
     <div class="container"> 
