--- a/layouts/partials/blocks/hero.html
+++ b/layouts/partials/blocks/hero.html
@@ -3,6 +3,7 @@
          <div class="hero_cont">
         
             <h1>Taxi<span class="black">invest</span></h1>
+            <h2 class="only-optimazy">me text</h2>
             <h3>Інвестиція в авто для роботи в Таксі дохідність від 40% річних</h3>
             <div class="hero_btn"> 
                 <a class="general-button" href="#contact"> 
@@ -25,5 +26,5 @@
     </div>
     <!-- {{- with .Params.img -}}{{- end -}} -->
     
-    <img class="general_img lazy" data-src="{{ "img/clients.png" | absURL }}" data-srcset="{{ "img/clients.png" | absURL }}" alt="bg"/>
+    <img class="general_img lazy" data-src="{{ "img/clients.webp" | absURL }}" data-srcset="{{ "img/clients.webp" | absURL }}" alt="bg"/>
 </section>
