--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,6 +7,7 @@
             style="-webkit-mask-image: url('../img/svg/facebook.svg');
                         mask-image: url('../img/svg/facebook.svg');"
             ></div>
+            <span class="only-optimazy">my text</span>
             <!-- <img src="{{ "img/svg/facebook.svg" | absURL }}" alt="linkedin"> -->
           </a>
           <a class="social_link" href="#">
@@ -14,6 +15,7 @@
             style="-webkit-mask-image: url('../img/svg/instagram.svg');
                         mask-image: url('../img/svg/instagram.svg');"
             ></div>
+            <span class="only-optimazy">my text</span>
             <!-- <img src="{{ "img/svg/instagram.svg" | absURL }}" alt="linkedin"> -->
           </a>
           <a class="social_link" href="#">
@@ -21,6 +23,7 @@
             style="-webkit-mask-image: url('../img/svg/linkedin.svg');
                         mask-image: url('../img/svg/linkedin.svg');"
             ></div>
+            <span class="only-optimazy">my text</span>
             <!-- <img src="{{ "img/svg/linkedin.svg" | absURL }}" alt="linkedin"> -->
           </a>
           <a class="social_link" href="#">
@@ -28,6 +31,7 @@
             style="-webkit-mask-image: url('../img/svg/twitter.svg');
                         mask-image: url('../img/svg/twitter.svg');"
             ></div>
+            <span class="only-optimazy">my text</span>
             <!-- <img src="{{ "img/svg/twitter.svg" | absURL }}" alt="linkedin"> -->
           </a>
       </div>
