--- a/assets/sass/components/hero.scss
+++ b/assets/sass/components/hero.scss
@@ -113,48 +113,7 @@
   }
 }
 
-.img-diver{
-  position: absolute;
-  bottom: 0;
-  left: 200px;
-  transform: translate(-35%, 50%);
-  z-index: 6!important; 
-  max-width: 100%;
-  @include md {
-    max-width: 500px;
-    left: 185px;
-  }
-  @include sm {
-    left: 75px;
-  }
-  @include xsl {
-    left: 0;
-  }
-  @include xs {
-    max-width: 100%;
-    bottom: 10px;
-  }
-}
-.img-bottom{
-  position: absolute;
-  bottom: 0px;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  object-fit: cover;
-  object-position: center 0px;
-  z-index: 4;
-}
-.bg-video{
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-  z-index: 2;
-} 
+  
 .only-for-optimization{
   position: absolute;
   z-index: 1;
@@ -244,7 +203,11 @@
   }
   
 }
-
+.only-optimazy{
+  position: absolute;
+  z-index: 1;
+  transform: scale(0);
+}
 .about{
   display: flex;
   flex-direction: column;
