--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -8,7 +8,7 @@
           <p>&nbsp; - &nbsp;</p>
           <a href="#">+1 (954) 376 1743​</a>
         </div>
-        <a href="privacy-pilicy">Privacy Policy</a>
+        <a href="/privacy-policy">Privacy Policy</a>
     </div> 
   </div> 
 </div>
