--- a/assets/sass/layout/header.scss
+++ b/assets/sass/layout/header.scss
@@ -7,8 +7,14 @@
   z-index: 99;
   transition: 0.3s all;
   border-bottom: 1px solid rgba(6, 74, 130, 0.09);
-  @include md {
-     
+  &.blue{
+    background: $background-blue-gradient!important;
+    .social{
+      background: white!important;
+    }
+    .social_img{
+      background: #074F82;
+    }
   }
   &.active { 
     box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.15);
