--- a/layouts/_default/page.html
+++ b/layouts/_default/page.html
@@ -3,9 +3,22 @@
   {{ partial "head.html" . }}
   <body>
   {{ block "header" . }}{{ partial "header.html" . }}{{ end }}
-    {{- range .Params.sections -}}
-      {{ partial (printf "blocks/%s" .block) (dict "Params" .) }} 
-    {{- end -}} 
+  <sections class="content">
+    <div class="container">
+        <div class="content_cont">
+            <div class="content_cont_top">
+                <div class="content_cont_top_info">
+                    <h2>{{ .Params.page_title }}</h2>
+                    <p >{{ .Params.paragraph }}</p>
+                </div> 
+            </div>
+            <div class="content_cont_bottom">
+                {{ .Content  }}
+            </div>
+        </div>
+        <!-- <a href="{{ .Site.BaseURL }}{{ .Params.grey_url }}" class="grey-button">{{ .Params.grey_button_text | markdownify }}</a> -->
+    </div>
+</sections>
   {{ partial "footer.html" . }} 
   </body>
 </html>
