--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header {{ if .Params.header_color }} blue {{ end}}">
   <div class="social">
     <div class="container">
       <div class="social_cont">
